test/syntax_errs/importer.js
// importer.js
module.exports = {};

require("./breaking");
